hphp/test/slow/php7_backported/scalar-types/scalar_reserved7.php.expectf

Fatal error: Cannot use 'foo\int' as class name as it is reserved in %s/scalar_reserved7.php on line 4
